--- a/NanoMemoryUtil/UI/MemView.xaml
+++ b/NanoMemoryUtil/UI/MemView.xaml
@@ -1,15 +1,15 @@
-﻿<UserControl x:Class="WarInTheNorthTrainer.UI.MemView"
+﻿<UserControl x:Class="NanoMemUtil.UI.MemView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WarInTheNorthTrainer.UI"
-             xmlns:warInTheNorthTrainer="clr-namespace:WarInTheNorthTrainer"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:ui="clr-namespace:NanoMemUtil.UI"
+             xmlns:code="clr-namespace:NanoMemUtil.Code"
              mc:Ignorable="d" 
              Background="LightGray"
              d:DesignHeight="400" d:DesignWidth="600">
     <d:UserControl.DataContext>
-        <local:MemViewModel/>
+        <ui:MemViewModel/>
     </d:UserControl.DataContext>
     <Grid Margin="5">
         <Grid.RowDefinitions>
@@ -45,7 +45,7 @@
             <ListView Grid.Row="2"
                       x:Name="_listView"
                       MouseDoubleClick="_listView_OnMouseDoubleClick"
-                      warInTheNorthTrainer:ListViewBehaviors.IsAutoUpdatingColumnWidths="true"
+                      code:ListViewBehaviors.IsAutoUpdatingColumnWidths="true"
                       ItemsSource="{Binding FoundValues}"
                       SelectedIndex="{Binding SelectedIndexFoundValue}"
                       SizeChanged="ElementSizeChanged">
@@ -80,14 +80,14 @@
                         <TextBlock Text="Scan Type" VerticalAlignment="Center" HorizontalAlignment="Right" Width="70"/>
                         <ComboBox Width="200" SelectedIndex="{Binding ScanTypeIndexSelected}" ItemsSource="{Binding ScanType}"/>
                     </WrapPanel>
-                    <WrapPanel Margin="0,10,0,0" Visibility="Collapsed">
+                    <WrapPanel Margin="0,10,0,0">
                         <TextBlock Text="Value type" VerticalAlignment="Center" HorizontalAlignment="Right" Width="70"/>
                         <ComboBox Width="200" SelectedIndex="{Binding ValueTypeIndexSelected}"
                                   ItemsSource="{Binding ValueType}"/>
                     </WrapPanel>
                     <WrapPanel Margin="0,10,0,0">
                         <TextBlock Height="20" Text="{Binding CurrentAddressInfo}" Width="150"/>
-                        <ProgressBar Height="20" Value="{Binding CompletedPercent}" Minimum="0" Maximum="{Binding MaxVal}"
+                        <ProgressBar Height="20" Value="{Binding CompletedPercent}" Minimum="0" Maximum="100"
                                      Width="110" Margin="10,0,0,0"/>
                     </WrapPanel>
                     <WrapPanel Margin="0,10,0,0">
